--- a/style.css
+++ b/style.css
@@ -588,3 +588,14 @@ footer {
 footer p {
   text-align: center;
 }
+
+
+/* TO FIX RIGHT-SIDE WHITESPACE PROBLEM */
+html, body
+{
+width: 100%; 
+height:100%;
+margin: 0px; 
+padding:Opx;
+overflow-x: hidden;
+}
