--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ a,
   padding: 6px 10px; /* Adjust the padding as needed */
   border-radius: 2rem;  /* Adjust the border-radius as needed */
   text-decoration: none;
-  color: #fff; /* Set the text color */
+  color: #FF7A3F; /* Set the text color */
   background-color: #FF7A3F; /* Set the background color */
   transition: background-color 0.3s ease; /* Add a smooth transition effect */
 }
