--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  
+    margin: 0; /* Reset default margin */
+    padding: 0; /* Reset default padding */
+ 
+  
+  /* Set background color for the entire page */
+ 
+    background-color: #FF7A3F;
+  
 }
 
 html {
@@ -126,7 +135,7 @@ nav,
 nav {
   justify-content: space-around;
   align-items: center;
-  height: 17vh;
+  height: 15vh;
 }
 
 .nav-links {
@@ -278,6 +287,9 @@ section {
   gap: 5rem;
   height: 83vh;
   margin: 0;
+
+  margin-top: 150px; /* Adjust the margin-top value as needed */
+
   background-color: #FF7A3F;
 }
 
@@ -435,7 +447,7 @@ section {
   position: static;
   background-color: #E0F4FF;
   margin: 0%;
-  margin-bottom: 50px;
+  height: 110%;
   background-color: #E0F4FF;
 
 /* Add your existing styles here */
@@ -447,6 +459,8 @@ section {
   border-radius: 2rem;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s;
+  height: auto;
+  margin: 0;
 }
 
 .details-container:hover {
@@ -599,14 +613,24 @@ article .icon {
 
 /* FOOTER SECTION */
 footer {
-  height: 10vh; /* Adjust the height as needed */
-  margin: 0 1rem;
+  height: 15vh; /* Adjust the height as needed */
+  margin: 0rem;
+  background-color: #fff;
 }
 
-footer p {
+
+/* Other styles remain unchanged */
+
+.c{
+  display: flex;
+  justify-content: center;
   text-align: center;
-  margin-top: 50px;
+  align-items: center;
+  height: 10;
+  
 }
+
+
 
 
 
@@ -620,3 +644,28 @@ margin: 0px;
 padding:Opx;
 overflow-x: hidden;
 }
+
+
+/* SMOOTH */
+
+#desktop-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 1000;
+  transition: background-color 0.3s ease;
+}
+
+#desktop-nav.transparent {
+  background-color: rgba(255, 255, 255, 0) !important;
+}
+
+/* Add smooth scrolling */
+html {
+  scroll-behavior: smooth;
+}
+
+
+
